--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
 URL: https://github.com/achafetz/adjuST
 BugReports: https://github.com/achafetz/adjuST/issues
+Imports: 
+    magrittr
