--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,4 +17,5 @@ RoxygenNote: 6.1.1
 URL: https://github.com/achafetz/adjuST
 BugReports: https://github.com/achafetz/adjuST/issues
 Imports: 
-    magrittr
+    magrittr,
+    readxl
