--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Authors@R:
 Description: This packages helps users automate changes to the COP19 Site Tool. 
     The process was created in Tanzania to fix distribution issues as a result of 
     how targets were set during COP18.
+Depends: R (>= 2.10)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -18,4 +19,8 @@ URL: https://github.com/achafetz/adjuST
 BugReports: https://github.com/achafetz/adjuST/issues
 Imports: 
     magrittr,
-    readxl
+    readxl,
+    dplyr,
+    tidyr,
+    stringr,
+    tibble
