fcn to generate distribution

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export("%>%")
 export(add_groupings)
 export(apply_distro)
 export(convert_na)
+export(gen_distro)
 export(import_tab)
 importFrom(magrittr,"%>%")
