--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export("%>%")
 export(add_groupings)
 export(apply_distro)
 export(convert_na)
+export(convert_zeros)
 export(gen_distro)
 export(import_tab)
+export(round_values)
 importFrom(magrittr,"%>%")
