drop columns with lowercase (ie weren't in original Site file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(convert_na)
 export(convert_zeros)
 export(gen_distro)
 export(import_tab)
+export(match_orig)
 export(round_values)
 importFrom(magrittr,"%>%")
