add fcns from tameDP to clean indicator codes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export("%>%")
 export(add_groupings)
 export(aggr_group)
 export(apply_distro)
+export(clean_indicators)
+export(convert_mods)
 export(convert_na)
 export(convert_zeros)
 export(gen_distro)
