--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(add_groupings)
 export(aggr_group)
 export(apply_distro)
+export(check_overall_variance)
 export(clean_indicators)
 export(convert_mods)
 export(convert_na)
